semantics/wolf/src/semantics_grammar.txt
// Kevin Dittmar
// William Ezekiel
// Joe Alacqua

Program = DefList Function
Program = Function

DefList = Def DefList
DefList = Def

Def = def identifier Sig assign Function

Sig = l_paren r_paren
Sig = l_paren SigArgs r_paren

SigArgs = identifier SigArgRest*

SigArgRest = comma identifier

Function = UserFunc
Function = NativeUnary
Function = NativeBinary
Function = Branch
Function = Fold
Function = Map

Fold = FoldSymbol FoldBody

FoldSymbol = foldl
FoldSymbol = foldr

Map = map l_paren UnaryOp comma ListArgument r_paren

Lambda = lambda_start l_paren Sig lambda_arrow Function r_paren

FoldBody = l_paren BinOp comma ListArgument r_paren

ListArgument = List
ListArgument = identifier
ListArgument = Function

NativeBinary = NativeBinOp l_paren Arg comma Arg r_paren

BinOp = NativeBinary
BinOp = identifier
BinOp = Lambda

NativeBinOp = plus
NativeBinOp = minus
NativeBinOp = mult
NativeBinOp = div
NativeBinOp = mod
NativeBinOp = lt
NativeBinOp = gt
NativeBinOp = lte
NativeBinOp = gte
NativeBinOp = equal
NativeBinOp = not_equal
NativeBinOp = and
NativeBinOp = or
NativeBinOp = xor

NativeListBinary = NativeListBinOp l_paren Arg comma ListArgument r_paren
NativeListBinOp = append
NativeListBinOp = prepend

NativeUnary = NativeUnaryOp l_paren Arg r_paren

UnaryOp = NativeUnary
UnaryOp = NativeListUnary
UnaryOp = identifier
UnaryOp = Lambda

NativeUnaryOp = neg
NativeUnaryOp = logical_not
NativeUnaryOp = identity
NativeUnaryOp = print

NativeListUnary = NativeListUnaryOp l_paren ListArgument r_paren
NativeListUnaryOp = head
NativeListUnaryOp = tail
NativeListUnaryOp = reverse
NativeListUnaryOp = flatten
NativeListUnaryOp = length

UserFunc = UserFuncName ArgList

UserFuncName = identifier
UserFuncName = Lambda
          
ArgList = l_paren r_paren
ArgList = l_paren Args r_paren

Args = Arg ArgRest*

ArgRest = comma Arg

Arg = Function
Arg = List
Arg = int_number
Arg = float_number
Arg = identifier
Arg = String

String = string_start StringMiddle* string_end

StringMiddle = String_body
StringMiddle = StringEscapeSeq

StringEscapeSeq = string_escape EscapeChar

EscapeChar = escape_alarm
EscapeChar = escape_backspace
EscapeChar = escape_formfeed
EscapeChar = escape_carriage_return
EscapeChar = escape_newline
EscapeChar = escape_tab
EscapeChar = escape_vertical_tab
EscapeChar = escape_backslash
EscapeChar = escape_single_quote
EscapeChar = escape_double_quote
EscapeChar = escape_question_mark
EscapeChar = escape_octal_char
EscapeChar = escape_hex_char
EscapeChar = escape_unicode_char
EscapeChar = escape_default

Branch = semi Function ternary_question_mark Function ternary_colon Function

List = start_list end_list
List = start_list Args end_list
